--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.3",
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^10.4.8",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.8",
@@ -30,13 +31,16 @@
     "@nestjs/platform-express": "^10.4.8",
     "@nestjs/swagger": "^8.0.5",
     "@nestjs/websockets": "^10.4.8",
+    "@playwright/test": "^1.49.1",
     "@prisma/adapter-neon": "^5.22.0",
     "@prisma/client": "^5.22.0",
     "@vercel/node": "^4.0.0",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "passport-jwt": "^4.0.1",
+    "playwright": "^1.49.1",
     "reflect-metadata": "^0.1.13",
     "vercel": "^39.2.2",
     "ws": "^8.18.0"
