Feat: add operative

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DIRECT_URL=='postgresql://neondb_owner:blvHRz0XE4BQ@ep-curly-bar-a2w1ym4x.eu-cen
 PORT=3000
 JWT_SECRET='1fa4aaa9-647c-40a9-a781-efd6308e7252'
 JWT_EXPIRES_IN="60m"
+
+APIKEY_WEATHER="CoPrZqbKpFYgcV5tbXMwnAGW71UUdwMe"
