Feat: add api key

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ JWT_SECRET='1fa4aaa9-647c-40a9-a781-efd6308e7252'
 JWT_EXPIRES_IN="60m"
 
 APIKEY_WEATHER="CoPrZqbKpFYgcV5tbXMwnAGW71UUdwMe"
+WEATHER_API_KEY="CoPrZqbKpFYgcV5tbXMwnAGW71UUdwMe"
+RESEND_API_KEY="re_VE6pWZD2_LTzBr9QdqJER1NgkjWRNyro2"
