--- a/.env
+++ b/.env
@@ -8,4 +8,7 @@ JWT_EXPIRES_IN="60m"
 
 APIKEY_WEATHER="CoPrZqbKpFYgcV5tbXMwnAGW71UUdwMe"
 WEATHER_API_KEY="CoPrZqbKpFYgcV5tbXMwnAGW71UUdwMe"
-RESEND_API_KEY="re_VE6pWZD2_LTzBr9QdqJER1NgkjWRNyro2"
+RESEND_API_KEY="re_EYqqL4QW_MHSUwYh6FwUqdnZoXQagLyJZ"
+PEXELS_API_KEY="sRt5q0TiGJCrUY4hhZF8oRIhbc5ZOsI5YinHjWjGXXxkWOcdggIFllnK"
+
+
