--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DATABASE_URL='postgresql://neondb_owner:blvHRz0XE4BQ@ep-curly-bar-a2w1ym4x.eu-ce
 DIRECT_URL=='postgresql://neondb_owner:blvHRz0XE4BQ@ep-curly-bar-a2w1ym4x.eu-central-1.aws.neon.tech/neondb?sslmode=require'
 PORT=3000
 JWT_SECRET='1fa4aaa9-647c-40a9-a781-efd6308e7252'
-JWT_EXPIRES_IN="60m"
+JWT_EXPIRES_IN="12h"
 
 APIKEY_WEATHER="CoPrZqbKpFYgcV5tbXMwnAGW71UUdwMe"
 WEATHER_API_KEY="CoPrZqbKpFYgcV5tbXMwnAGW71UUdwMe"
