--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,13 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/main.ts",
+            "src": "dist/src/main.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/.*",
+            "src": "/(.*)",
             "dest": "src/main.ts",
             "methods": [
                 "GET",
