--- a/package.json
+++ b/package.json
@@ -22,34 +22,37 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.3",
-    "@nestjs/cache-manager": "^2.3.0",
-    "@nestjs/common": "^10.4.8",
-    "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.4.8",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/microservices": "^10.4.8",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.4.8",
-    "@nestjs/swagger": "^8.0.5",
-    "@nestjs/websockets": "^10.4.8",
+    "@nestjs/cache-manager": "^3.0.1",
+    "@nestjs/common": "^11.0.15",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.0.15",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/microservices": "^11.0.15",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.0.15",
+    "@nestjs/swagger": "^11.1.1",
+    "@nestjs/websockets": "^11.0.15",
     "@prisma/adapter-neon": "^5.22.0",
     "@prisma/client": "^6.3.1",
+    "@types/aws-lambda": "^8.10.149",
+    "@vendia/serverless-express": "^4.12.6",
     "@vercel/node": "^2.10.3",
+    "aws-lambda": "^1.0.7",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
-    "cache-manager": "^5.7.6",
+    "cache-manager": "^6.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "passport-jwt": "^4.0.1",
     "playwright": "^1.49.1",
     "reflect-metadata": "^0.1.13",
-    "vercel": "^32.3.0",
+    "vercel": "^41.6.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.7",
     "@nestjs/schematics": "10.1.1",
-    "@nestjs/testing": "10.3.2",
+    "@nestjs/testing": "^11.0.15",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.12",
     "@types/node": "20.17.6",
